# flower

./: .gitignore  AGENTS.md  BirthFlowerMVP.spec  CURRENT_TASKS.md  PLANS.md  PROJECT_INDEX.md  README.md  anchor_resolve.py  asset_resolver.py  birth_flower_mvp.py  birth_flower_parser.py  canvas_text_item.py  config_store.py  datetime_picker.py  desktop_export.py  flower-macos.spec  generation_readiness.py  glyph_panel.py  glyph_service.py  gpt_parser.py  heart_symbol.py  inbox_service_client.py  line_icons.py  local_order_parser.py  material_library.py  models.py  order_batch.py  order_catalog.py  order_importer.py  package-lock.json  package.json  parse_pipeline.py  production.py  prompt_references.py  prompts_db.py  providers.py  pyi_rthook_flower.py  pytest.ini  renderer.py  requirements.txt  (+6 more)
automation/inbox-service/: .gitignore  README.md  alembic.ini  pyproject.toml
automation/inbox-service/app/: authorization.py  batch_exporter.py  config.py  db.py  factory.py  inbox_writer.py  main.py  models.py  refund_gate.py  refund_scheduler.py  report_watcher.py  repository.py  rescrape_queue.py  routes.py  run_mode.py  scheduler.py  schemas.py  scrape_planner.py
automation/inbox-service/tests/: conftest.py  test_ai_reconcile.py  test_batch_export.py  test_dedup.py  test_inbox_writer.py  test_ingest.py  test_items.py  test_mark_jobs.py  test_next_pending_order.py  test_order_cleanup.py  test_order_template_binding.py  test_orders_batch_and_list.py  test_refund.py  test_refund_scheduler.py  test_remark_optional.py  (+8 more)
services/api/: package.json  pyproject.toml
(+272 files in other folders)
