[project]
name = "flower-inbox-service"
version = "0.1.0"
description = "店小秘 → Flower 自动取单的本地收单服务（automation 一期，独立小服务）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "openpyxl>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
