[project]
name = "flower-api"
version = "0.1.0"
description = "Local FastAPI backend for the Flower editor."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "pydantic>=2.8",
  "fonttools>=4.0",
  "cairosvg>=2.7",
  "ezdxf>=1.3",
  "numpy>=2.0",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "httpx2>=2.4",
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.13"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
ignore_missing_imports = true
